infra/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: collector.prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-kong
            port:
              number: 8000
  - host: grafana.prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-grafana
            port:
              number: 3000
  - host: keycloak.prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-keycloak
            port:
              number: 8080
  - host: adminer.prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-adminer
            port:
              number: 80
  - host: rabbitmq.prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-rabbitmq
            port:
              number: 15672
